completed Scenario outline datatable

--- a/Reports/SparkReport/spark.html
+++ b/Reports/SparkReport/spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">krishna mohan</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 22, 2023 02:40:57 pm</span></a>
+<a href="#"><span class="badge badge-primary">Feb 22, 2023 07:05:00 pm</span></a>
 </li>
 </ul>
 </div>
@@ -61,19 +61,19 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 22, 2023 02:40:57 pm</h3>
+<h3>Feb 22, 2023 07:05:00 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 22, 2023 02:41:01 pm</h3>
+<h3>Feb 22, 2023 07:05:06 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>1</h3>
+<h3>2</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -96,7 +96,7 @@
 </div>
 <div class="card-footer">
 <div><small data-tooltip='100%'>
-<b>1</b> features passed
+<b>2</b> features passed
 </small>
 </div>
 <div>
@@ -118,7 +118,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='100%'><b>4</b> scenarios passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -138,7 +138,7 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>3</b> steps passed</small></div>
+<div><small data-tooltip='100%'><b>15</b> steps passed</small></div>
 <div>
 <small data-tooltip='0%'><b>0</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
@@ -157,7 +157,7 @@
 </div></div>
 <script>
 var timeline = {
-"feature1":3.742
+"feature1":3.928,"feature 2":1.099
 };
 </script>
 <div class="row">
@@ -166,18 +166,18 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 1,
+passParent: 2,
 failParent: 0,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
+passChild: 4,
 failChild: 0,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 3,
+passGrandChild: 15,
 failGrandChild: 0,
 warningGrandChild: 0,
 skipGrandChild: 0,
@@ -209,7 +209,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">feature1</p>
             <p class="text-sm">
-              <span>2:40:57 pm</span> / <span>00:00:03:742</span>
+              <span>7:05:01 pm</span> / <span>00:00:03:928</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -218,9 +218,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">feature1</h5>
-<span class='badge badge-success'>02.22.2023 2:40:57 pm</span>
-<span class='badge badge-danger'>02.22.2023 2:41:01 pm</span>
-<span class='badge badge-default'>00:00:03:742</span>
+<span class='badge badge-success'>02.22.2023 7:05:01 pm</span>
+<span class='badge badge-danger'>02.22.2023 7:05:05 pm</span>
+<span class='badge badge-default'>00:00:03:928</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -237,22 +237,148 @@ eventsCount: 5,
     </div>
         <div class="collapse">
           <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.StepDefintions.user_is_in_page(java.lang.String)">
+              <div class="step pass-bg" title="stepDefinitions.HomePage_SD.user_is_in_page(java.lang.String)">
                 <span>Given user is in "Web Examples - CrossBrowserTesting.com"  page</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.StepDefintions.user_clicks_on_selenium_example_page_link()">
+              <div class="step pass-bg" title="stepDefinitions.HomePage_SD.user_clicks_on_selenium_example_page_link()">
                 <span>When user clicks on  Selenium Example Page link</span>
       <div>
       </div>
               </div>
-              <div class="step pass-bg" title="stepDefinitions.StepDefintions.system_should_display_page(java.lang.String)">
+              <div class="step pass-bg" title="stepDefinitions.HomePage_SD.system_should_display_page(java.lang.String)">
                 <span>Then system should display "Selenium Test Example Page" page</span>
       <div>
       </div>
               </div>
           </div>
+        </div>
+  </div>
+</div>
+          </div>
+        </li>
+        <li class="test-item"  status="pass" test-id="8"
+          author=""
+          tag=""
+          device="">
+          <div class="test-detail">
+            <p class="name">feature 2</p>
+            <p class="text-sm">
+              <span>7:05:05 pm</span> / <span>00:00:01:099</span>
+              <span class="badge pass-bg log float-right">Pass</span>
+            </p>
+          </div>
+          <div class="test-contents d-none">
+<div class="detail-head">
+<div class="p-v-10">
+<div class="info">
+<h5 class="test-status text-pass">feature 2</h5>
+<span class='badge badge-success'>02.22.2023 7:05:05 pm</span>
+<span class='badge badge-danger'>02.22.2023 7:05:06 pm</span>
+<span class='badge badge-default'>00:00:01:099</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
+<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
+<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
+</div>
+<div class="m-t-10 m-l-5"></div>
+</div>
+</div>
+<div class="accordion mt-4">
+  <div class="card">
+    <div class="card-header" role="tab">
+      <div class="card-title">
+        <div class="node" id="9"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+      </div>
+    </div>
+        <div class="scenario_outline collapse">
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="10"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>Given user is in "Selenium Test Example Page" home page</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When user enters the "sheereesh" on the Form Elements</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user enters the "naveen" on the Text Area</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then user click on the submit button</span>
+      <div>
+      </div>
+                  </div>
+              </div>
+            </div>
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="17"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>Given user is in "Selenium Test Example Page" home page</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When user enters the "soudamani" on the Form Elements</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user enters the "soudamaniii" on the Text Area</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then user click on the submit button</span>
+      <div>
+      </div>
+                  </div>
+              </div>
+            </div>
+            <div class="card-body l1">
+              <div class="card-header">
+                <div class="card-title outline-child">
+                  <div class="node" id="24"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+                </div>
+              </div>
+              <div class="card-body mt-3 collapse">
+                  <div class="step pass-bg">
+                    <span>Given user is in "Selenium Test Example Page" home page</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>When user enters the "srinivas" on the Form Elements</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>And user enters the "pedayogaih" on the Text Area</span>
+      <div>
+      </div>
+                  </div>
+                  <div class="step pass-bg">
+                    <span>Then user click on the submit button</span>
+      <div>
+      </div>
+                  </div>
+              </div>
+            </div>
         </div>
   </div>
 </div>
