--- a/Reports/SparkReport/spark.html
+++ b/Reports/SparkReport/spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">krishna mohan</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 22, 2023 07:05:00 pm</span></a>
+<a href="#"><span class="badge badge-primary">Feb 25, 2023 03:52:05 pm</span></a>
 </li>
 </ul>
 </div>
@@ -52,6 +52,11 @@
 <span class="ico"><i class="fa fa-list"></i></span>
 </a>
 </li>
+<li class="nav-item dropdown" onclick="toggleView('exception-view')">
+<a id="nav-exception" class="dropdown-toggle" href="#">
+<span class="ico"><i class="fa fa-bug"></i></span>
+</a>
+</li>
 </ul>
 </div>
 </div>      <div class="vcontainer">
@@ -61,25 +66,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 22, 2023 07:05:00 pm</h3>
+<h3>Feb 25, 2023 03:52:05 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 22, 2023 07:05:06 pm</h3>
+<h3>Feb 25, 2023 03:52:11 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>2</h3>
+<h3>0</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 </div>
@@ -95,12 +100,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'>
-<b>2</b> features passed
+<div><small data-tooltip='0%'>
+<b>0</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='0%'><b>0</b> features failed,
+<small data-tooltip='100%'><b>1</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -118,9 +123,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> scenarios passed</small></div>
+<div><small data-tooltip='33%'><b>1</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> scenarios failed,
+<small data-tooltip='66%'><b>2</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -138,10 +143,10 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>15</b> steps passed</small></div>
+<div><small data-tooltip='42%'><b>6</b> steps passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> steps failed,
-<b>0</b> skipped, <b data-tooltip='%'>0</b> others
+<small data-tooltip='14%'><b>2</b> steps failed,
+<b>6</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
 </div>
@@ -157,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"feature1":3.928,"feature 2":1.099
+"feature1":5.558
 };
 </script>
 <div class="row">
@@ -166,21 +171,21 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 2,
-failParent: 0,
+passParent: 0,
+failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 4,
-failChild: 0,
+passChild: 1,
+failChild: 2,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 15,
-failGrandChild: 0,
+passGrandChild: 6,
+failGrandChild: 2,
 warningGrandChild: 0,
-skipGrandChild: 0,
+skipGrandChild: 6,
 infoGrandChild: 0,
 eventsCount: 5,
 };
@@ -194,7 +199,7 @@ eventsCount: 5,
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
+<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -202,25 +207,25 @@ eventsCount: 5,
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="fail" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">feature1</p>
             <p class="text-sm">
-              <span>7:05:01 pm</span> / <span>00:00:03:928</span>
-              <span class="badge pass-bg log float-right">Pass</span>
+              <span>3:52:06 pm</span> / <span>00:00:05:558</span>
+              <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">feature1</h5>
-<span class='badge badge-success'>02.22.2023 7:05:01 pm</span>
-<span class='badge badge-danger'>02.22.2023 7:05:05 pm</span>
-<span class='badge badge-default'>00:00:03:928</span>
+<h5 class="test-status text-fail">feature1</h5>
+<span class='badge badge-success'>02.25.2023 3:52:06 pm</span>
+<span class='badge badge-danger'>02.25.2023 3:52:11 pm</span>
+<span class='badge badge-default'>00:00:05:558</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -232,90 +237,34 @@ eventsCount: 5,
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>homepage</div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>scenario1</div>
       </div>
     </div>
-        <div class="collapse">
-          <div class="card-body">
-              <div class="step pass-bg" title="stepDefinitions.HomePage_SD.user_is_in_page(java.lang.String)">
-                <span>Given user is in "Web Examples - CrossBrowserTesting.com"  page</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepDefinitions.HomePage_SD.user_clicks_on_selenium_example_page_link()">
-                <span>When user clicks on  Selenium Example Page link</span>
-      <div>
-      </div>
-              </div>
-              <div class="step pass-bg" title="stepDefinitions.HomePage_SD.system_should_display_page(java.lang.String)">
-                <span>Then system should display "Selenium Test Example Page" page</span>
-      <div>
-      </div>
-              </div>
-          </div>
-        </div>
-  </div>
-</div>
-          </div>
-        </li>
-        <li class="test-item"  status="pass" test-id="8"
-          author=""
-          tag=""
-          device="">
-          <div class="test-detail">
-            <p class="name">feature 2</p>
-            <p class="text-sm">
-              <span>7:05:05 pm</span> / <span>00:00:01:099</span>
-              <span class="badge pass-bg log float-right">Pass</span>
-            </p>
-          </div>
-          <div class="test-contents d-none">
-<div class="detail-head">
-<div class="p-v-10">
-<div class="info">
-<h5 class="test-status text-pass">feature 2</h5>
-<span class='badge badge-success'>02.22.2023 7:05:05 pm</span>
-<span class='badge badge-danger'>02.22.2023 7:05:06 pm</span>
-<span class='badge badge-default'>00:00:01:099</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=8</span>
-<span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
-<span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
-</div>
-<div class="m-t-10 m-l-5"></div>
-</div>
-</div>
-<div class="accordion mt-4">
-  <div class="card">
-    <div class="card-header" role="tab">
-      <div class="card-title">
-        <div class="node" id="9"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
-      </div>
-    </div>
-        <div class="scenario_outline collapse">
+        <div class="scenario_outline ">
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="10"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+                  <div class="node" id="3"><span class="badge log pass-bg mr-2">Pass</span>scenario1</div>
                 </div>
               </div>
               <div class="card-body mt-3 collapse">
                   <div class="step pass-bg">
-                    <span>Given user is in "Selenium Test Example Page" home page</span>
+                    <span>Given user is "Web Examples - CrossBrowserTesting.com" page</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>When user enters the "sheereesh" on the Form Elements</span>
+                    <span>When user clicks on the Selenium Example Page link</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>And user enters the "naveen" on the Text Area</span>
+                    <span>Given user is "Selenium Test Example Page" page</span>
       <div>
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>Then user click on the submit button</span>
+                    <span>When user enters names on the text boxes as per the row no 2 and clicks on the submit button</span>
       <div>
       </div>
                   </div>
@@ -324,27 +273,41 @@ eventsCount: 5,
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="17"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+                  <div class="node" id="10"><span class="badge log fail-bg mr-2">Fail</span>scenario1</div>
                 </div>
               </div>
-              <div class="card-body mt-3 collapse">
-                  <div class="step pass-bg">
-                    <span>Given user is in "Selenium Test Example Page" home page</span>
+              <div class="card-body mt-3 ">
+                  <div class="step fail-bg">
+                    <span>Given user is "Web Examples - CrossBrowserTesting.com" page</span>
       <div>
+        <textarea disabled class="code-block">org.junit.ComparisonFailure: window titleWeb Examples - CrossBrowserTesting.comdoes not match expected:<[Web Examples - CrossBrowserTesting.com]> but was:<[Selenium Test Example Page]>
+	at org.junit.Assert.assertEquals(Assert.java:117)
+	at commonMethods.SeleniumSPecificMethods.validatePageTitle(SeleniumSPecificMethods.java:34)
+	at stepDefinitions.DataDriven_SD.user_is_page(DataDriven_SD.java:15)
+	at ?.user is "Web Examples - CrossBrowserTesting.com" page(file:///C:/Users/sireesh/eclipse-workspace/practicingProject99/src/test/resources/features/datadriven_Feature1.feature:5)
+</textarea>
+      
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>When user clicks on the Selenium Example Page link</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>Given user is "Selenium Test Example Page" page</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>When user enters names on the text boxes as per the row no 3 and clicks on the submit button</span>
+      <div>Step skipped
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>When user enters the "soudamani" on the Form Elements</span>
-      <div>
+                    <span>hooks.Hooks.takeAndAttachScreenShotsToReports(io.cucumber.java.Scenario)</span>
+      <div>scenario1scenario failed
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user enters the "soudamaniii" on the Text Area</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then user click on the submit button</span>
       <div>
       </div>
                   </div>
@@ -353,27 +316,41 @@ eventsCount: 5,
             <div class="card-body l1">
               <div class="card-header">
                 <div class="card-title outline-child">
-                  <div class="node" id="24"><span class="badge log pass-bg mr-2">Pass</span>cheking the page</div>
+                  <div class="node" id="17"><span class="badge log fail-bg mr-2">Fail</span>scenario1</div>
                 </div>
               </div>
-              <div class="card-body mt-3 collapse">
-                  <div class="step pass-bg">
-                    <span>Given user is in "Selenium Test Example Page" home page</span>
+              <div class="card-body mt-3 ">
+                  <div class="step fail-bg">
+                    <span>Given user is "Web Examples - CrossBrowserTesting.com" page</span>
       <div>
+        <textarea disabled class="code-block">org.junit.ComparisonFailure: window titleWeb Examples - CrossBrowserTesting.comdoes not match expected:<[Web Examples - CrossBrowserTesting.com]> but was:<[Selenium Test Example Page]>
+	at org.junit.Assert.assertEquals(Assert.java:117)
+	at commonMethods.SeleniumSPecificMethods.validatePageTitle(SeleniumSPecificMethods.java:34)
+	at stepDefinitions.DataDriven_SD.user_is_page(DataDriven_SD.java:15)
+	at ?.user is "Web Examples - CrossBrowserTesting.com" page(file:///C:/Users/sireesh/eclipse-workspace/practicingProject99/src/test/resources/features/datadriven_Feature1.feature:5)
+</textarea>
+      
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>When user clicks on the Selenium Example Page link</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>Given user is "Selenium Test Example Page" page</span>
+      <div>Step skipped
+      </div>
+                  </div>
+                  <div class="step skip-bg">
+                    <span>When user enters names on the text boxes as per the row no 1 and clicks on the submit button</span>
+      <div>Step skipped
       </div>
                   </div>
                   <div class="step pass-bg">
-                    <span>When user enters the "srinivas" on the Form Elements</span>
-      <div>
+                    <span>hooks.Hooks.takeAndAttachScreenShotsToReports(io.cucumber.java.Scenario)</span>
+      <div>scenario1scenario failed
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And user enters the "pedayogaih" on the Text Area</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then user click on the submit button</span>
       <div>
       </div>
                   </div>
@@ -393,7 +370,69 @@ eventsCount: 5,
 </div>
 <div class="test-content-detail"><div class="detail-body"></div></div>
 </div></div>
-        </div>
+<div class="test-wrapper row view exception-view attributes-view">
+<div class="test-list">
+<div class="test-list-tools">
+<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
+</div>
+<div class="test-list-wrapper scrollable">
+<ul class="test-list-item">
+<li class="test-item">
+<div class="test-detail">
+<span class="meta">
+<span class='badge log badge-danger'>2</span>
+</span>
+<p class="name">org.junit.ComparisonFailure</p>
+<p class="duration text-sm">2 tests</p>
+</div>
+<div class="test-contents d-none">
+<div class="info">
+<h4>org.junit.ComparisonFailure</h4>
+<span status="fail" class='badge log badge-danger'>2 failed</span>
+</div>
+<table class='table table-sm mt-4'>
+<thead>
+<tr>
+<th class="status-col">Status</th>
+<th class="timestamp-col">Timestamp</th>
+<th>TestName</th>
+</tr>
+</thead>
+<tbody>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>15:52:11 pm</td>
+<td>
+<a href="#" class="linked" test-id='1' id='12'>Given user is "Web Examples - CrossBrowserTesting.com" page</a>
+<div class="">
+<span class="badge badge-default">feature1.scenario1.Given user is "Web Examples - CrossBrowserTesting.com" page</span>
+</div>
+</td>
+</tr>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>15:52:11 pm</td>
+<td>
+<a href="#" class="linked" test-id='1' id='19'>Given user is "Web Examples - CrossBrowserTesting.com" page</a>
+<div class="">
+<span class="badge badge-default">feature1.scenario1.Given user is "Web Examples - CrossBrowserTesting.com" page</span>
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</li>
+</ul>
+</div>
+</div>
+<div class="test-content scrollable">
+<div class="test-content-detail">
+<div class="detail-body"></div>
+</div>
+</div>
+</div>        </div>
       </div>
     </div>
   </div>
